reestablish git head

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ mirror_github:
   variables:
     GIT_SSH_COMMAND: "ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -i ${CI_PROJECT_DIR}/.ssh/id_rsa"
     GITHUB_URL: "git@github.com:sammy8806/pyFloatplane.git"
+    TEMP_BRANCH: "pushMe"
 
   before_script:
     - mkdir -p ${CI_PROJECT_DIR}/.ssh
@@ -24,6 +25,12 @@ mirror_github:
     - chmod 0600 ${CI_PROJECT_DIR}/.ssh/id_rsa
     - git remote remove github 2>/dev/null || true
     - git remote add github $GITHUB_URL
+    # BEGIN https://cmatskas.com/merge-detached-head-back-to-originmaster-git/
+    - git checkout –b $TEMP_BRANCH #makes a new branch from current detached HEAD
+    - git branch –f $CI_COMMIT_REF_NAME $TEMP_BRANCH #update master to point to the new <temp> branch
+    - git branch –d $TEMP_BRANCH #delete the <temp> branch
+    - git push github $CI_COMMIT_REF_NAME #push the re-established history
+    # END
     - echo Git Debug
     - echo GITHUB_URL = $GITHUB_URL
     - echo CI_COMMIT_REF_NAME = $CI_COMMIT_REF_NAME
