updated example config

--- a/floatplane.ini.dist
+++ b/floatplane.ini.dist
@@ -1,11 +1,42 @@
-; Please fill out ALL fields
+;; Please fill out ALL fields
 [floatplane]
+
+;; Your username for logging into floatplane.com
+;; Value: <String>
 username=
+
+;; Your password for logging into floatplane.com
+;; Value: <String>
 password=
 
-[lmg-forums]
-pass_hash=
-member_id=
-timezone=Europe/Berlin
-login_key=
-device_key=
+
+[download]
+
+;; Path of the downloaded files (relative or absolute)
+;; Value: <String>
+;; Default: .
+;target_path=
+
+;; Permissions for the containing folders
+;; Value: Ocatal based permissions (ex. 755)
+;; Default: 755
+;target_path_permissions=
+
+;; Create subfolders in `target_path` with the creator shorthand (ex. linustechtips or bitwit_ultra)
+;; Value: <True|False>
+;; Default: False
+;creator_subfolder=
+
+;; Permissions for the downloaded files
+;; Value: Ocatal based permissions
+;; Default: 644
+;dl_file_permissions=
+
+
+;; Deprecated after move away from the forums
+;[lmg-forums]
+;pass_hash=
+;member_id=
+;timezone=Europe/Berlin
+;login_key=
+;device_key=
